Fix for prism overflow, and removal of main-grid
main-grid was some legacy implementation that is much cleaner implemented in main-content

--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -33,16 +33,6 @@ h4 {
 
 .main-content{
     padding: 1rem;
-}
-
-.main-grid{
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr $mediumdevice-width 1fr;
-}
-
-@media screen and (max-width: $header-width){
-    .main-grid{
-        grid-template-columns: 0fr 1fr 0fr;
-    }
+    max-width: $mediumdevice-width;
+    margin: auto;
 }
